# backend/internal/module/payment/handler/payment.go
@@ -29,3 +29,18 @@ func (h *PaymentHandler) GetDashboardV1Payments(w http.ResponseWriter, r *http.R
 
 	transport.WriteJSON(w, http.StatusOK, response)
 }
+
+func (h *PaymentHandler) GetDashboardV1PaymentsSummary(w http.ResponseWriter, r *http.Request, params openapigen.GetDashboardV1PaymentsSummaryParams) {
+	result, err := h.paymentUC.GetPaymentSummary(openapigen.GetDashboardV1PaymentsParams{
+		FromDate: params.FromDate,
+		ToDate:   params.ToDate,
+	})
+	if err != nil {
+		transport.WriteError(w, err)
+		return
+	}
+
+	response := toPaymentSummaryResponse(result)
+
+	transport.WriteJSON(w, http.StatusOK, response)
+}
